<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    >

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/head_line"
            android:text="@string/head_line"
            android:textSize="24sp"
            android:textAlignment="center"
            android:padding="12dp"
            android:layout_marginBottom="20dp"
            android:textStyle="bold"
            android:background="@color/heading"
            android:textColor="@color/black"
            />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="20dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_name"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:textAlignment="textStart"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/my_age"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_weight="2"
                android:textColor="@color/black"
                android:textAlignment="textEnd"
                />

        </LinearLayout>



        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:contentDescription="@string/meme2"
            android:src="@drawable/mem1"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_marginBottom="20dp"

            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:contentDescription="@string/meme1"
            android:src="@drawable/mem2"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:layout_marginBottom="20dp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingHorizontal="15dp"
            android:justificationMode="inter_word"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_me"
            android:textColor="@color/black"
            android:paddingHorizontal="15dp"
            android:justificationMode="inter_word"
            />


    </LinearLayout>

</ScrollView>